# internin.tech

./: LICENSE  README.md
backend/: .gitignore  Cargo.toml  README.md  celerybeat-schedule.db  pyproject.toml
backend/src/: __init__.py  auth.py  config.py  job_scraper.rs  main.py  main.rs
backend/src/jobs/: __init__.py  jobs_processing.py  tasks.py
backend/src/utils/: __init__.py  celery.py  supabase.py
scraper/: .gitignore  Cargo.toml  README.md
scraper/docker/: Dockerfile
scraper/src/: database.rs  main.rs  scraper_client.rs  supabase_client.rs
scraper/src/engine/: client.rs  mod.rs  rules.rs
