[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
regex = "1.10.6"
reqwest = "0.12.7"
rocket = "0.5.1"
scraper = "0.20.0"
serde = "1.0.210"
serde_json = "1.0.128"
tokio = { version = "1.40.0",  features = ["rt-multi-thread", "macros"] }
url = "2.3.1"
postgrest = "1.0"
dotenv = "0.15.0"
fantoccini = "0.21.2"
futures = "0.3.30"
